Bug fixes
* Fixed incorrect sorting by file size
* Fixed potential duplicate result when sorting any column in main view while searching
* Exceptions optimization